tried to make changes to add a button,faced a problem hence learning buttons

--- a/src/lab/exp5/Codes/1.html
+++ b/src/lab/exp5/Codes/1.html
@@ -1,17 +1,38 @@
 <html>
-
+<style>
+<!-----p {margin-left: 120px;}
+h1{width:600px;height:710px;border:1px dotted #000;margin-left:600px;}
+</style>---->
 <div style="width:1200px;height:710px;border:1px solid #000;margin-left:150px;border-width:medium 2px;"><!--First half-->
-
+<!----<h1>
+<p>
+<button id="1">SAMPLE</button>
+</p>
+</h1>---->
 
 
 <div style="border-left:2.5px dotted ;margin-left:600px;height:710px;width:0px;">
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<div style="border-top:2.5px dotted;width:600px;"</div>
+<div style="border-top:2.5px dotted;width:600px;"></div>
+</div>
 
 
 </div>
 
-</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
