--- a/src/lab/exp5/SRIP/Codes/exp.html
+++ b/src/lab/exp5/SRIP/Codes/exp.html
@@ -94,13 +94,12 @@ left:765px;
 	}
 .tube {
   margin-left:250px;
-  
   height: 250px;
   width: 30px;
-  position: relative;
+  position:relative;
   overflow: hide;
-  background: linear-gradient(90deg, rgba(228, 225, 222, 0.3) 0%, rgba(216, 212, 208, 0.3) 0%, rgba(203, 198, 193, 0.3) 0%, rgba(188, 184, 179, 0.3) 6.79%, rgba(166, 162, 159, 0.3) 14.61%, rgba(216, 217, 217, 0.3) 48.07%, rgba(223, 224, 225, 0.3) 52.25%, rgba(210, 210, 210, 0.3) 62.52%, rgba(176, 173, 171, 0.3) 82.19%, rgba(166, 162, 159, 0.3) 87.64%, rgba(208, 210, 211, 0.3) 100%, rgba(166, 168, 171, 0.3) 100%);
-  border-radius:0px 0px 40px 40px/0 0 50px 50px;;
+  background: linear-gradient(90deg, rgba(228, 225, 222, 0.3) 0%, rgba(216, 212, 208, 0.3) 0%, rgba(203, 198, 193,   0.3) 0%, rgba(188, 184, 179, 0.3) 6.79%, rgba(166, 162, 159, 0.3) 14.61%, rgba(216, 217, 217, 0.3) 48.07%, rgba  (223, 224, 225, 0.3) 52.25%, rgba(210, 210, 210, 0.3) 62.52%, rgba(176, 173, 171, 0.3) 82.19%, rgba(166, 162, 159,    0.3) 87.64%, rgba(208, 210, 211, 0.3) 100%, rgba(166, 168, 171, 0.3) 100%);
+  border-radius:0px 0px 40px 40px/0 0 50px 50px;
 }
 .tube:before, .tube__outer-glass {
   border-radius: 0px 0px 40px 40px/0 0 50px 50px;
@@ -131,12 +130,18 @@ left:765px;
 }
 .tube__contents:before {
   content: '';
-  background: linear-gradient(to bottom, rgba(156, 82, 22, 0.5) 50%, rgba(156, 82, 22, 0.9) 51%, rgba(156, 82, 22, 0.9) 100%);
+  background: linear-gradient(to bottom, rgba(156, 82, 22, 0.5) 50%, rgba(156, 82, 22, 0.9) 51%, rgba(156, 82, 22,   0.9) 100%);
   position: absolute;
   top: -1px;
   border-radius: 50% / 100%;
   height: 1px;
   width: 25px;
+}
+.rectangle {
+  height: 50px;
+  width: 100px;
+  background-color: #555;
+  margin-left:100px;
 }
 
 </style>
@@ -155,13 +160,15 @@ left:765px;
     <button class="button">Sample</button>
     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
     <button class="button1">Load</button><br><br> 
-    <button class="button2">Start</button>
+    <button class="button2">Start</button><br><br>
 <button class="button2">Plot</button>
   <div class="tube">
   <div class="tube__top"></div>
   <div class="tube__contents"></div>
   <div class="tube__outer-glass"></div>
-   </div>
+   </div><br><br><br>
+   <div class="rectangle"/>              <div class="rectangle"/>
+  
   
  
 
