--- a/src/lab/exp5/SRIP/Codes/exp.html
+++ b/src/lab/exp5/SRIP/Codes/exp.html
@@ -308,7 +308,15 @@ window.onclick = function(event) {
 }
 function Benzene() {
 
-    document.getElementById("ttcontent").color="#fff";
+    document.getElementById("ttcontent").style.background="#DC143C";
+}
+function Acetaldehyde() {
+
+    document.getElementById("ttcontent").style.background="	#0000FF";
+}
+function Acetate() {
+
+    document.getElementById("ttcontent").style.background="#00FF00";
 }
 
 
@@ -330,11 +338,8 @@ function Benzene() {
   <button  id="test"  class="dropbtn" style="float: left;" onclick="myFunction()"  >Sample</button>
   <div id="myDropdown" class="dropdown-content">
     <button class="button1" onclick="Benzene()">Benzene</button>
-    <button id="Acetaldehyde" class="button1" onclick="Acetaldehyde()">Acetaldehyde</button>
-    <button id="Ethyl Acetate" class="button1" onclick="Acetate()">Ethyl Acetate</button>
-    <!---<input type="button" onclick="chBackcolor('red');">
-   <a href="#">Link 2</a>
-    <a href="#">Link 3</a>--->
+    <button  class="button1" onclick="Acetaldehyde()">Acetaldehyde</button>
+    <button  class="button1" onclick="Acetate()">Ethyl Acetate</button>
   </div>
 </div>
     
@@ -344,8 +349,8 @@ function Benzene() {
     <div class="button2"  >Plot</div>
     <div class="tube"  >
      <div class="tube__top"></div>
-     <div class="tube__contents" id="ttcotent"></div>
-     <div class="tube__outer-glass"></div>
+     <div class="tube__contents" ></div>
+     <div class="tube__outer-glass" id="ttcontent"></div>
      
    </div>
 
