--- a/src/lab/exp5/SRIP/Codes/exp.html
+++ b/src/lab/exp5/SRIP/Codes/exp.html
@@ -234,6 +234,7 @@ left:765px;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  margin-top: 100px;
 }
 
 /* Change color of dropdown links on hover */
@@ -284,17 +285,29 @@ left:765px;
   text-align: center;
   text-indent: center;
 }
-</style>
-<head>
-	<script >
-		/* When the user clicks on the button, 
-toggle between hiding and showing the dropdown content */
-function myFunction() {
-  document.getElementById("myDropdown").classList.toggle("show");
+.square
+{
+	height: 30px;
+  width: 30px;
+  background-image:linear-gradient(to right,#0AA10E,#21DC26);
+  text-align: center;
+  text-indent: center;
+  margin-left:175px; 
 }
+.square1
+{
+	height: 30px;
+  width: 30px;
+  background-image:linear-gradient(to right,#0AA10E,#21DC26);
+  text-align: center;
+  text-indent: center;
+  margin-left:225px; 
+}
+</style>
 
-// Close the dropdown menu if the user clicks outside of it
-window.onclick = function(event) {
+<head>
+	<script type="text/javascript" src="basic.js">
+		window.onclick = function(event) {
   if (!event.target.matches('.dropbtn')) {
     var dropdowns = document.getElementsByClassName("dropdown-content");
     var i;
@@ -306,21 +319,11 @@ window.onclick = function(event) {
     }
   }
 }
-function Benzene() {
-
-    document.getElementById("ttcontent").style.background="#DC143C";
-}
-function Acetaldehyde() {
-
-    document.getElementById("ttcontent").style.background="	#0000FF";
-}
-function Acetate() {
-
-    document.getElementById("ttcontent").style.background="#00FF00";
-}
-
 
 	</script>
+	
+
+	
 
 
 
@@ -335,11 +338,11 @@ function Acetate() {
 
    <div class="centered">
      <div class="dropdown">
-  <button  id="test"  class="dropbtn" style="float: left;" onclick="myFunction()"  >Sample</button>
+  <button    class="dropbtn"  onclick="myFunction()"  >Sample</button>
   <div id="myDropdown" class="dropdown-content">
-    <button class="button1" onclick="Benzene()">Benzene</button>
-    <button  class="button1" onclick="Acetaldehyde()">Acetaldehyde</button>
-    <button  class="button1" onclick="Acetate()">Ethyl Acetate</button>
+    <button onclick="Benzene()">Benzene</button>
+    <button onclick="Acetaldehyde()">Acetaldehyde</button>
+    <button onclick="Acetate()">Ethyl Acetate</button>
   </div>
 </div>
     
@@ -355,12 +358,9 @@ function Acetate() {
    </div>
 
 
-   
-    
-   
-
-  <br><br><br>
-   
+<div class="square" style="float: left;"></div>
+<div class="square1" style="float: left;"></div>
+   <br><br><br><br>
 <div class="tv" style="float: left;" ></div>
 <div class="tv1" style="float: left;"></div><br>
 <div class="button2">Evaluate</div>
