did a few changes in and around

--- a/src/lab/exp5/SRIP/Codes/exp.html
+++ b/src/lab/exp5/SRIP/Codes/exp.html
@@ -287,18 +287,18 @@ left:765px;
 }
 .square
 {
-	height: 30px;
-  width: 30px;
-  background-image:linear-gradient(to right,#0AA10E,#21DC26);
+	height: 50px;
+  width: 68px;
+  background-color: rgb(128,128,128,0.3);
   text-align: center;
   text-indent: center;
-  margin-left:175px; 
+  margin-left:125px; 
 }
 .square1
 {
-	height: 30px;
-  width: 30px;
-  background-image:linear-gradient(to right,#0AA10E,#21DC26);
+	height: 50px;
+  width: 68px;
+  background-color: rgb(128,128,128,0.3);
   text-align: center;
   text-indent: center;
   margin-left:225px; 
@@ -308,6 +308,47 @@ left:765px;
   height: 200px;
   position: relative;
   background: white;
+}
+.benzene 
+{
+display: inline-block;
+  	padding: 15px 25px;
+  	font-size: 20px;
+  	cursor: pointer;
+  	text-align: center;
+ 	outline: none;
+    background-color:  #DC143C;
+  	border:none;
+  	border-radius: 20px;
+        border-color:	#006400;
+
+}
+.acetaldehyde
+{
+	display: inline-block;
+  	padding: 15px 25px;
+  	font-size: 20px;
+  	cursor: pointer;
+  	text-align: center;
+ 	outline: none;
+    background-color:  #0000FF;
+  	border:none;
+  	border-radius: 20px;
+        border-color:	#006400;
+
+}
+.acetate
+{
+	display: inline-block;
+  	padding: 15px 25px;
+  	font-size: 20px;
+  	cursor: pointer;
+  	text-align: center;
+ 	outline: none;
+        background-color:  #00FF00;
+  	border:none;
+  	border-radius: 20px;
+        border-color:	#006400;
 }
 </style>
 
@@ -346,9 +387,9 @@ left:765px;
      <div class="dropdown">
   <button    class="dropbtn"  onclick="myFunction()"  >Sample</button>
   <div id="myDropdown" class="dropdown-content">
-    <button onclick="Benzene()">Benzene</button>
-    <button onclick="Acetaldehyde()">Acetaldehyde</button>
-    <button onclick="Acetate()">Ethyl Acetate</button>
+    <button onclick="Benzene()" class="Benzene" style="float: left;">Benzene</button>
+    <button onclick="Acetaldehyde()" class="Acetaldehyde" style="float: center">Acetaldehyde</button>
+    <button onclick="Acetate()" class="Acetate" style="float: right;">Ethyl Acetate</button>
   </div>
 </div>
     
@@ -364,8 +405,8 @@ left:765px;
    </div>
 
 
-<div class="square" style="float: left;"></div>
-<div class="square1" style="float: left;"></div>
+<div class="square" style="float: left;">Frequency Generator</div>
+<div class="square1" style="float: left;">Frequency Receiver</div>
    <br><br><br><br>
 <div class="tv" style="float: left;" ></div>
 <div class="tv1" style="float: left;"></div><br>
