--- a/src/lab/exp5/SRIP/Codes/exp.html
+++ b/src/lab/exp5/SRIP/Codes/exp.html
@@ -191,7 +191,7 @@ left:765px;
       width: 150px;
       height: 50px;
       margin: 10px 0;
-      background: grey;
+      background: light grey;
       border-radius: 50% / 10%;
       margin-left:200px;
       color: white;
@@ -304,6 +304,7 @@ left:765px;
   background-image:linear-gradient(to right,#0AA10E,#21DC26);
   text-align: center;
   text-indent: center;
+  display: inline-block;
  
 }
 .square
@@ -372,13 +373,73 @@ display: inline-block;
         border-color:	#006400;
 }
 
-.ball {
+.ball7 {
     width:50px;
     height:50px;
     border:3px solid #900;
     border-radius:50%;
     background-color: #FF7F50;
     margin-left: 200px;
+    display: inline-block;
+
+}
+.ball6 {
+    width:50px;
+    height:50px;
+    border:3px solid #900;
+    border-radius:50%;
+    background-color: #FF7F50;
+    margin-left: 48px;
+    display: inline-block;
+
+}
+.ball1 {
+    width:50px;
+    height:50px;
+    border:3px solid #900;
+    border-radius:50%;
+    background-color: #FF7F50;
+    margin-left: 10px;
+    display: inline-block;
+
+}
+.ball2 {
+    width:50px;
+    height:50px;
+    border:3px solid #900;
+    border-radius:50%;
+    background-color: #FF7F50;
+    margin-left: 35px;
+    display: inline-block;
+
+}
+.ball3 {
+    width:50px;
+    height:50px;
+    border:3px solid #900;
+    border-radius:50%;
+    background-color: #FF7F50;
+    margin-left: 42px;
+    
+    display: inline-block;
+
+}
+.ball4 {
+    width:50px;
+    height:50px;
+    border:3px solid #900;
+    border-radius:50%;
+    background-color: #FF7F50;
+    margin-left: 22px;
+    display: inline-block;
+
+}.ball5 {
+    width:50px;
+    height:50px;
+    border:3px solid #900;
+    border-radius:50%;
+    background-color: #FF7F50;
+    margin-left: 39px;
     display: inline-block;
 
 }
@@ -492,7 +553,19 @@ border:2px;
   <div class="centered" >
        <div class="rectangle" style="float: left;"> NORTH </div>
        <div class="canvas" style="float: center;">
-       	<div class="ball"><i class="right1"></i></div>
+       	<div class="ball1"><i class="right1"></i></div>
+ 		<div class="ball2"><i class="right1"></i></div>
+ 		<div class="ball3"><i class="right1"></i></div><br><br>
+ 		<div class="ball4"><i class="right1"></i></div>
+ 		<div class="ball5"><i class="right1"></i></div>
+ 		<div class="ball6"><i class="right1"></i></div><br><br>
+ 		<div class="ball1"><i class="right1"></i></div>
+ 		<div class="ball2"><i class="right1"></i></div>
+ 		<div class="ball3"><i class="right1"></i></div><br><br>
+ 		<div class="ball4"><i class="right1"></i></div>
+ 		<div class="ball5"><i class="right1"></i></div>
+ 		<div class="ball6"><i class="right1"></i></div><br><br>
+
 
 
 
@@ -502,7 +575,7 @@ border:2px;
 
 
        </div>
-        <div class="rectangle1" style="float: right;" >SOUTH </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <div class="rectangle1" style="float: right;" >SOUTH </div><br><br>
        <div style="border-top:2.5px dotted;width:600px;"></div>
       
 
@@ -523,7 +596,19 @@ ctx.arc(70, 100, 2.5, 0, 2 * Math.PI);
 ctx.arc(45, 100, 2.5, 0, 2 * Math.PI);
 ctx.stroke();
 </script> --->
+<script type="text/javascript">
+	function Evaluate()
+{
+  if(document.getElementById("ttcontent").background=="#DC143C")
+    window.open("plot_acetaldehyde.html", ' '); 
+  else if (document.getElementById("ttcontent").background=="#00FF00")
+    window.open("plot_benzene.html", ' '); 
+  else
+    window.open("plot_acetaldehyde.html",' ');
 
+
+}
+</script>
 
 </body>
 
