--- a/src/lab/exp5/SRIP/Codes/exp.html
+++ b/src/lab/exp5/SRIP/Codes/exp.html
@@ -85,6 +85,7 @@ left:765px;
   	border-radius: 15px;
   	box-shadow: 0 9px #999;
 	margin-left:460px;
+	display: inline-block;
         }
 
 
@@ -103,7 +104,8 @@ left:765px;
   	border-radius: 15px;
   	box-shadow: 0 9px #999;
 	margin-left:460px;
-        display: inline-block;}
+    display: inline-block;
+}
 
 
 .button3:active {
@@ -471,8 +473,10 @@ i {
 border:2px;
  background-color: #fff;
  display: inline-block;
+ margin-left: 10px;
 
 }
+
 </style>
 
 <head>
@@ -510,7 +514,7 @@ border:2px;
 
    <div class="centered">
      <div class="dropdown">
-  <button    class="dropbtn"  onclick="myFunction()"  >Sample</button>
+  <button    class="dropbtn"  onclick="myFunction() "  >Sample</button>
   <div id="myDropdown" class="dropdown-content">
     <button onclick="Benzene()" class="Benzene" style="float: left;">Benzene</button>
     <button onclick="Acetaldehyde()" class="Acetaldehyde" style="float: center">Acetaldehyde</button>
@@ -519,7 +523,7 @@ border:2px;
 </div>
     
 <!--&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&//nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp-->
-    <div class="button2" style="float: center;" onclick="myMove()">Load</div><br><br> 
+    <div class="button2" style="float: center;" onclick="myMove()" >Load</div><br><br> 
     <div class="button2"  >Start</div><br><br>
     <div class="button3"  >Plot</div>
     <div class="tube"  id="myAnimation">
@@ -537,11 +541,20 @@ border:2px;
 <div class="tv" style="float: left;"></div>
 <div class="flask" style="float: left;"> </div>
 <div class="tv" style="float: left;"></div>
+<svg width="250px" height="80px" >
+  <defs>
+    <marker id="arrow" markerWidth="10" markerHeight="10" refX="0" refY="3" orient="auto" markerUnits="strokeWidth">
+      <path d="M0,0 L0,6 L9,3 z" fill="#f00" />
+    </marker>
+  </defs>
+  <line x1="50" y1="50" x2="200" y2="50" stroke="#000" stroke-width="5" marker-end="url(#arrow)" id="line1" display="none"/>
+  <text x="100" y="20" id="text1" display="none" >Magnetic Field</text>
+</svg>
 
-<div class="button2" onclick="Evaluate()">Evaluate</div>
+<div class="button2" onclick="Evaluate()" style="float: left;">Evaluate</div>
       </div>
 </div>
-
+<script type="text/javascript" src="canvasarrow.js"></script>
 
 <div style="border-left:2.5px dotted ;margin-left:600px;height:710px;width:0px;">
 
@@ -609,6 +622,8 @@ ctx.stroke();
 
 }
 </script>
+<script type="text/javascript" src="svgmagnetic.js"></script>
+
 
 </body>
 
