done with graphs,just a lil animation left

--- a/src/lab/exp5/SRIP/Codes/exp.html
+++ b/src/lab/exp5/SRIP/Codes/exp.html
@@ -3,6 +3,7 @@
 
 <link rel="stylesheet" type="text/css" href="styles.css" />
 
+
 <head>
 	<script type="text/javascript" src="basic.js">
 		window.onclick = function(event) {
@@ -18,8 +19,7 @@
   }
 }
 </script>
- <script language="javascript" type="text/javascript" src="jquery.js"></script> 
-    <script language="javascript" type="text/javascript" src="jquery.flot.js"></script> 
+ 
 </head>
 <body>
 <div style="width:1200px;height:710px;border:1px solid #000;margin-left:150px;border-width:medium 2px;">
@@ -93,7 +93,8 @@
        <!---</div>-->
         <div class="rectangle1" style="float: right;" >SOUTH </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
        <div style="border-top:2.5px dotted;width:600px;"></div>
-       <div id="chartContainer" style="height: 300px; width: 100%;" display="block"></div>
+       <div id="chartContainer" style="height: 370px; width: 100%;"></div>
+
 
 
 
@@ -101,11 +102,7 @@
       </div>
     </div>
 <script type="text/javascript" src="charts.js"></script>
-<script src="https://canvasjs.com/assets/script/canvasjs.min.js"> 
-
-</script>
-
-
+<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 <script type="text/javascript" src="svgmagnetic.js">
   
 </script>
