--- a/src/lab/exp5/SRIP/Codes/exp.html
+++ b/src/lab/exp5/SRIP/Codes/exp.html
@@ -42,8 +42,7 @@
      <div class="tube__top"></div>
      <div class="tube__contents" ></div>
      <div class="tube__outer-glass" id="ttcontent"></div>
-     
-   </div>
+     </div><!--for test tube div-->
 <div class="square" style="float: left;">Frequency Generator</div>
 <div class="square1" style="float: left;">Frequency Receiver</div>
    <br><br>
@@ -59,10 +58,11 @@
   </defs>
   <line x1="50" y1="50" x2="200" y2="50" stroke="#000" stroke-width="5" marker-end="url(#arrow)" id="line1" display="none"/>
   <text x="100" y="20" id="text1" display="none" >Magnetic Field</text>
-</svg></div>
+</svg>
+</div><!---for canvas-->
 
-<div class="button2" onclick="Evaluate()" style="float: left;">Evaluate</div>
-      </div>
+<div class="button2" onclick="otherpage()" style="float: left;">Evaluate</div>
+</div>
 </div>
 <div style="border-left:2.5px dotted ;margin-left:600px;height:710px;width:0px;">
 </div>
@@ -93,7 +93,7 @@
        <!---</div>-->
         <div class="rectangle1" style="float: right;" >SOUTH </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
        <div style="border-top:2.5px dotted;width:600px;"></div>
-       <div id="chartContainer" style="height: 370px; width: 100%;"></div>
+       <div id="chartContainer" style="height: 350px; width: 100%;" ></div>
 
 
 
@@ -101,11 +101,24 @@
 
       </div>
     </div>
-<script type="text/javascript" src="charts.js"></script>
+   
 <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
-<script type="text/javascript" src="svgmagnetic.js">
-  
+<script type="text/javascript" src="charts.js"></script>
+<script type="text/javascript" src="svgmagnetic.js"></script>
+<script type="text/javascript"> 
+    function otherpage()
+{
+  if(document.getElementById("ttcontent").style.background=="#DC143C")
+    window.open("../../plot_benzene.html");
+  else if (document.getElementById("ttcontent").style.background=="#00FF00")
+    window.open("../../plot_acetaldehyde.html", ' '); 
+  else 
+    window.open("../../plot_ethylacetate.html",' ');
+
+
+}
 </script>
+
 </body>
 </html>
 
