added the arrow

--- a/src/lab/exp5/SRIP/Codes/exp.html
+++ b/src/lab/exp5/SRIP/Codes/exp.html
@@ -71,14 +71,14 @@
        <div class="rectangle" style="float: left;"> NORTH </div>
       <div class="canvas" style="float: center;">
       	<div class="ball1"><i class="right1"></i></div>
- 		<div class="ball2"><i class="right1"></i></div>
- 		<div class="ball3"><i class="right1"></i></div><br><br>
- 		<div class="ball4"><i class="right1"></i></div>
- 		<div class="ball5"><i class="right1"></i></div>
- 		<div class="ball6"><i class="right1"></i></div><br><br>
- 		<div class="ball1"><i class="right1"></i></div>
- 		<div class="ball2"><i class="right1"></i></div>
- 		<div class="ball3"><i class="right1"></i></div><br><br>
+ 		<div class="ball2"><div class="right1"></div></div>
+ 		<div class="ball3"><div class="right1"></div></div><br><br>
+ 		<div class="ball4"><div class="right1"></div></div>
+ 		<div class="ball5"><div class="right1"></div></div>
+ 		<div class="ball6"><div class="right1"></div></div><br><br>
+ 		<div class="ball1"><div class="right1"></div></div>
+ 		<div class="ball2"><div class="right1"></div></div>
+ 		<div class="ball3"><div class="right1"></div></div><br><br>
     
    
  		<svg width="250px" height="80px">
@@ -93,6 +93,8 @@
        </div>
         <div class="rectangle1" style="float: right;" >SOUTH </div>
        <div style="border-top:2.5px dotted;width:600px;"></div>
+       <div class="arrow"></div>
+       
        <div id="chartContainer" style="height: 350px; width: 100%;" ></div>
 
 
