solved the issues raised

--- a/src/lab/exp5/SRIP/Codes/exp.html
+++ b/src/lab/exp5/SRIP/Codes/exp.html
@@ -28,7 +28,7 @@
      <div class="dropdown">
   <button    class="dropbtn"  onclick="myFunction()" id="sample"  style="float: center;" >Sample</button>
    <div id="myDropdown" class="dropdown-content">
-    <button onclick="Benzene()" class="Benzene" style="float: top;" id="benzenebtn">Benzene</button>
+    <button onclick="Benzene()" class="Benzene" style="float: top;" id="benzenebtn">&nbsp &nbsp  Benzene &nbsp&nbsp</button>
     <button onclick="Acetaldehyde()" class="Acetaldehyde" style="float: center" id="acetaldehydebtn">Acetaldehyde</button>
     <button onclick="Acetate()" class="Acetate" style="float: right;" id="acetatebtn">Ethyl Acetate</button>
   </div>
@@ -37,7 +37,7 @@
 
     <div class="button2" style="float: center;" onclick="myMove()" >Load</div><br><br> 
     <div class="button2" onclick="myMove1()"  >Start</div><br><br>
-    <div class="button2" onclick="plot()" >Plot</div>
+    <div class="button2" onclick="plot()" > &nbspPlot</div>
     <div class="arrow" id="arrow1" style="display: none;"></div>
     <div class="arrow" id="arrowmov" style="display: none;"></div>
     
@@ -66,7 +66,7 @@
 </svg>
 </div><!---for canvas-->
 
-<div class="button2" onclick="evalaute()" id="evaluatebutton" style="display: none;">Evaluate</div>
+<div class="button3" onclick="evalaute()" id="evaluatebutton" style="display: none;">Evaluate</div>
 </div>
 </div>
 <div style="border-left:2.5px dotted ;margin-left:600px;height:710px;width:0px;">
