--- a/src/lab/exp5/SRIP/Codes/exp.html
+++ b/src/lab/exp5/SRIP/Codes/exp.html
@@ -22,7 +22,7 @@
  <script type="text/javascript"> var value=0;</script>
 </head>
 <body>
-<div style="width:1200px;height:710px;border:1px solid #000;margin-left:150px;border-width:medium 2px;">
+<div style="width:80%;height:98%;border:1px solid #000;margin-left:150px;border-width:medium 2px;">
 <div class="split left">
     <div class="centered">
      <div class="dropdown">
@@ -69,7 +69,7 @@
 <div class="button3" onclick="evalaute()" id="evaluatebutton" style="display: none;">Evaluate</div>
 </div>
 </div>
-<div style="border-left:2.5px dotted ;margin-left:600px;height:710px;width:0px;">
+<div style="border-left:2.5px dotted ;margin-left:600px;height:100%;width:0px;">
 </div>
 <div class="split right">
   <div class="centered" >
